# raytrascii

./: Cargo.toml  LICENSE  README.md
examples/: crossterm.rs
src/: aabb.rs  brightness.rs  camera.rs  color.rs  lib.rs  main.rs  ray.rs  render.rs
src/camera/: direction.rs  mod.rs  view.rs
src/hittable/: mod.rs  sphere.rs
src/lalg/: mod.rs  orthnormbasis.rs  vec.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/scene/: mod.rs
src/scene/hittable/: aabb.rs  aarect.rs  mod.rs  sphere.rs
src/scene/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
