[package]
name = "raytrascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.5"
ctrlc = { version = "3.2", features = ["termination"] }

[dependencies.terminal]
version = "0.2"
features = ["crossterm-backend"]
